syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.compare_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

// Zero-Stor Data Types

message Namespace {
    string label = 1;
    int64 readRequestPerHour = 2;
    int64 writeRequestPerHour = 3;
    int64 nrObjects = 4;
}

message Object {
    bytes key = 1;
    bytes value = 2;
    repeated string referenceList = 3;
}

enum ObjectStatus {
    ok = 0 [(gogoproto.enumvalue_customname) = "ObjectStatusOK"];
    corrupted = 1 [(gogoproto.enumvalue_customname) = "ObjectStatusCorrupted"];
    missing = 2 [(gogoproto.enumvalue_customname) = "ObjectStatusMissing"];
}

// NamespaceManager allows you to retrieve information about a namespace.
//
// Metadata required (by the server)
// for all methods of the ObjectManager:
//
//     "authentication"
//     JWT token to proof you have sufficient permissions
//     to execute the given action within the given namespace.
//
//     "label"
//     Identifier of the namespace,
//     where the manage will be stored at,
//     or the existing object already lives at.
//
// This metadata cannot be enforced by this protobuf schema.
// However, not defining any of this metadata for any given method,
// will result in a GRPC error.
service NamespaceManager {
    // GetNamespace gets all available information about
    // a requested namespace. Most of the information returned,
    // is not stored in persistent memory,
    // and instead computed on the fly or available
    // from the in-memory cache.
    rpc GetNamespace (GetNamespaceRequest) returns (GetNamespaceResponse) {}
}

message GetNamespaceRequest {}
message GetNamespaceResponse {
    Namespace namespace = 1;
}

// ObjectManager allows you to Manage objects and get info about them.
//
// Metadata required (by the server)
// for all methods of the ObjectManager:
//
//     "authentication"
//     JWT token to proof you have sufficient permissions
//     to execute the given action within the given namespace.
//
//     "label"
//     Identifier of the namespace,
//     where the manage will be stored at,
//     or the existing object already lives at.
//
// This metadata cannot be enforced by this protobuf schema.
// However, not defining any of this metadata for any given method,
// will result in a GRPC error.
//
// All methods operate within a given namespace,
// identified by the label given as metadata.
// Meaning that for example the ExistObject might
// return false because that key doesn't exist within
// the specified namespace, even though it might exists
// within an other namespace.
service ObjectManager {
    // Set an object, either overwriting an existing key,
    // or creating a new one.
    rpc SetObject (SetObjectRequest) returns (SetObjectResponse) {}

    // Get an existing object, linked to a given key.
    rpc GetObject (GetObjectRequest) returns (GetObjectResponse) {}

    // Get multiple existing objects,
    // linked to the given keys.
    rpc GetObjectStream (GetObjectStreamRequest) returns (stream Object) {}

    // ExistObject returns whether or not an object,
    // for a given key, exists.
    rpc ExistObject (ExistObjectRequest) returns (ExistObjectResponse) {}

    // ExistObject returns whether or not
    // one or multiple objects, or (a) given key(s), exists.
    rpc ExistObjectStream (ExistObjectStreamRequest) returns (stream ExistObjectStreamResponse) {}

    // DeleteObjects deletes multiple objects,
    // using the given keys.
    // Deleting an non-existing object is concidered valid.
    rpc DeleteObjects (DeleteObjectsRequest) returns (DeleteObjectsResponse) {}

    // GetObjectStatus returns the status of an object,
    // indicating whether it's OK, missing or corrupt.
    rpc GetObjectStatus (GetObjectStatusRequest) returns (GetObjectStatusResponse) {}

    // GetObjectStatusStream returns the status of
    // all objects for which a key was given in the request,
    // indicating for each of them whether they're
    // OK, missing or corrupt.
    rpc GetObjectStatusStream (GetObjectStatusStreamRequest) returns (stream GetObjectStatusStreamResponse) {}

    // ListObjectKeyStream lists the keys of
    // all stored objects within the namespace (identified by the given label).
    rpc ListObjectKeyStream (ListObjectKeyStreamRequest) returns (stream ListObjectKeyStreamResponse) {}

    // SetReferenceList allows you to create a new reference list
    // or overwrite an existing reference list,
    // for a given object.
    rpc SetReferenceList(SetReferenceListRequest) returns (SetReferenceListResponse) {}

    // GetReferenceList returns an existing reference list
    // for a given object. An error is returned in case no
    // reference exists for that object.
    rpc GetReferenceList(GetReferenceListRequest) returns (GetReferenceListResponse) {}

    // AppendReferenceList appends the given references
    // to the end of the reference list of the given object.
    // If no reference list existed for this object prior to this call,
    // this method will behave the same as SetReferenceList.
    rpc AppendReferenceList(AppendReferenceListRequest) returns (AppendReferenceListResponse) {}

    // DeleteReferenceList removes the references of the given list,
    // from the references of the existing list.
    // It also returns all references which couldn't be deleted
    // from the existing list, because these references did not
    // exist in the given reference list.
    rpc DeleteReferenceList(DeleteReferenceListRequest) returns (DeleteReferenceListResponse) {}
}

message SetObjectRequest {
    Object object = 1;
}
message SetObjectResponse {}

message GetObjectRequest {
    bytes key = 1;
}
message GetObjectResponse {
    Object object = 1;
}

message GetObjectStreamRequest {
    repeated bytes keys = 1;
}

message ExistObjectRequest {
    bytes key = 1;
}
message ExistObjectResponse {
    bool exists = 1;
}

message ExistObjectStreamRequest {
    repeated bytes keys = 1;
}
message ExistObjectStreamResponse {
    bytes key = 1;
    bool exists = 2;
}

message DeleteObjectsRequest {
    repeated bytes keys = 1;
}
message DeleteObjectsResponse {
}

message GetObjectStatusRequest {
    bytes key = 1;
}
message GetObjectStatusResponse {
    ObjectStatus status = 1;
}

message GetObjectStatusStreamRequest {
    repeated bytes keys = 1;
}
message GetObjectStatusStreamResponse {
    bytes key = 1;
    ObjectStatus status = 2;
}

message ListObjectKeyStreamRequest {}
message ListObjectKeyStreamResponse {
    bytes key = 1;
}

message SetReferenceListRequest {
    bytes key = 1;
    repeated string referenceList = 2;
}
message SetReferenceListResponse {}

message GetReferenceListRequest {
    bytes key = 1;
}
message GetReferenceListResponse {
    repeated string referenceList = 1;
}

message AppendReferenceListRequest {
    bytes key = 1;
    repeated string referenceList = 2;
}
message AppendReferenceListResponse {}

message DeleteReferenceListRequest {
    bytes key = 1;
    repeated string referenceList = 2;
}
message DeleteReferenceListResponse {
}